// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Authentication logout: should work 1`] = `
Object {
  "data": Object {
    "logout": true,
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Authentication should handle error when logout fails 1`] = `
Object {
  "data": null,
  "errors": Array [
    [GraphQLError: Logout fails],
  ],
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;
